--- a/css/styles.css
+++ b/css/styles.css
@@ -25,13 +25,7 @@ body {
   background: radial-gradient(ellipse at bottom center, var(--gray--t), var(--gray) 90%);
 }
 
-/*body {
-  text-align: center;
-  font-family: courier;
-  background-image: url("../assets/image.jpeg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
+/*
 
 .my_social {
   position: absolute;
