--- a/css/styles.css
+++ b/css/styles.css
@@ -40,11 +40,11 @@ body {
   height: 1.5em;
 }
 
-/*
 main {
   width: 600px;
 }
-@media (max-width: 610px) {
+
+/*@media (max-width: 610px) {
   main {
     width: 320px;
   }
