--- a/css/styles.css
+++ b/css/styles.css
@@ -69,12 +69,12 @@ h1 {
   letter-spacing: -0.06rem;
 }
 
-/*form {
+form {
   border: 7px double #AA8B59;
   padding: 3rem;
 }
 
-nav {
+/*nav {
   text-transform: uppercase;
   letter-spacing: 0.1rem;
   margin: 0 0 2rem 0;
