--- a/css/styles.css
+++ b/css/styles.css
@@ -74,12 +74,13 @@ form {
   padding: 3rem;
 }
 
-/*nav {
+nav {
   text-transform: uppercase;
   letter-spacing: 0.1rem;
   margin: 0 0 2rem 0;
 }
-nav a {
+
+/*nav a {
   display: inline-block;
   padding: 0.3rem 0;
   margin: 0 1rem;
