--- a/css/styles.css
+++ b/css/styles.css
@@ -80,12 +80,13 @@ nav {
   margin: 0 0 2rem 0;
 }
 
-/*nav a {
+nav a {
   display: inline-block;
   padding: 0.3rem 0;
   margin: 0 1rem;
 }
-nav a.active {
+
+/*nav a.active {
   border-bottom: 2px solid var(--brown);
 }
 
