--- a/css/styles.css
+++ b/css/styles.css
@@ -86,11 +86,11 @@ nav a {
   margin: 0 1rem;
 }
 
-/*nav a.active {
+nav a.active {
   border-bottom: 2px solid var(--brown);
 }
 
-a {
+/*a {
   color: inherit;
   text-decoration: none;
 }
