--- a/css/styles.css
+++ b/css/styles.css
@@ -90,12 +90,12 @@ nav a.active {
   border-bottom: 2px solid var(--brown);
 }
 
-/*a {
+a {
   color: inherit;
   text-decoration: none;
 }
 
-.form-field {
+/*.form-field {
   margin: 0 0 1rem 0;
 }
 .form-field:focus-within label {
