--- a/css/styles.css
+++ b/css/styles.css
@@ -103,13 +103,13 @@ a {
   color: white;
 }
 
-/*label {
+label {
   display: block;
   text-align: left;
   color: #7C7C7C;
 }
 
-input {
+/*input {
   width: 100%;
   background: none;
   color: white;
