--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ input:focus {
   outline: 0;
 }
 
-/*.button {
+.button {
   background: var(--brown);
   color: white;
   border: 0;
@@ -133,7 +133,7 @@ input:focus {
   letter-spacing: 0.1rem;
 }
 
-.forgot-password {
+/*.forgot-password {
   display: block;
   margin: 2rem 0;
   text-transform: uppercase;
