--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ input:focus {
   letter-spacing: 0.1rem;
 }
 
-/*.forgot-password {
+.forgot-password {
   display: block;
   margin: 2rem 0;
   text-transform: uppercase;
@@ -141,7 +141,7 @@ input:focus {
   opacity: 0.9;
 }
 
-.containers {
+/*.containers {
   width: 520px;
   margin: 20px auto;
 }
