--- a/css/styles.css
+++ b/css/styles.css
@@ -141,12 +141,12 @@ input:focus {
   opacity: 0.9;
 }
 
-/*.containers {
+.containers {
   width: 520px;
   margin: 20px auto;
 }
 
-#contact h1 {
+/*#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
