--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ input:focus {
   margin: 20px auto;
 }
 
-/*#contact h1 {
+#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
@@ -158,7 +158,7 @@ input:focus {
   border-bottom: 3px solid #f3f3f3;
 }
 
-.cal {
+/*.cal {
   display: inline-block;
   background: #ffe;
   color: #555;
