--- a/css/styles.css
+++ b/css/styles.css
@@ -179,12 +179,12 @@ input:focus {
   font-size: 15px;
 }
 
-/*.cal th {
+.cal th {
   color: #aaa;
   line-height: 200%;
 }
 
-.cal th:first-child {
+/*.cal th:first-child {
   color: #f00;
 }
 
