--- a/css/styles.css
+++ b/css/styles.css
@@ -184,11 +184,11 @@ input:focus {
   line-height: 200%;
 }
 
-/*.cal th:first-child {
+.cal th:first-child {
   color: #f00;
 }
 
-.cal th:last-child {
+/*.cal th:last-child {
   color: #04d;
 }
 
